# spock

./: .gitmodules  CMakeLists.txt
include/: types.hpp  util.hpp
include/spock/: core.hpp  descriptor.hpp  info.hpp  internal.hpp  pipeline_builder.hpp  shader.hpp  types.hpp  util.hpp
src/: core.cpp  descriptor.cpp  destroy.cpp  info.cpp  pipeline_builder.cpp  shader.cpp
